Improve blurhash canvas display, fix cards on mobile, fix `.scroll-container` and add shadow

--- a/web/links.scss
+++ b/web/links.scss
@@ -3,14 +3,15 @@
 .link-grid {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto;
+    grid-auto-rows: 8em;
     margin: 0 10vw 0;
-    min-height: 95vh;
     gap: 1em;
 
     @media (min-width: $breakpoint) {
         grid-template-columns: repeat(var(--grid-cols), 1fr);
+        grid-auto-rows: unset;
         grid-template-rows: repeat(var(--grid-rows), 1fr);
+        min-height: 95vh;
         margin-top: -20pt;
     }
 
@@ -191,6 +192,26 @@
                 max-height: calc(100% - 64pt);
                 margin-top: -12pt;
                 padding-top: 12pt;
+                @media (min-width: $breakpoint) {
+                    max-height: calc(100% - 123pt);
+                }
+                
+                &::before {
+                    content: " ";
+                    position: absolute;
+                    top: 72pt;
+                    left: 0;
+                    width: 100%;
+                    height: 16pt;
+                    z-index: 2;
+                    background-image: linear-gradient(to bottom, $light1, transparent);
+                    @media (min-width: $breakpoint) {
+                        top: 111pt;
+                    }
+                    @media only screen and (prefers-color-scheme: dark) {
+                        background-image: linear-gradient(to bottom, $dark1, transparent);
+                    }
+                }
             }
 
             ul {
@@ -278,7 +299,8 @@
                         transition: opacity 120ms ease-out;
                         position: absolute;
                         width: 100%;
-                        height: 100%;
+                        height: 240px;
+                        top: calc(-120px + 16pt);
                         &.blurhash-ready {
                             opacity: 0.6;
 
